alignment issues fixed
need to fix:
- search box shape
- aesthetics

--- a/style.scss
+++ b/style.scss
@@ -1,9 +1,10 @@
+
 $color: rgb(66, 133, 244);
 $font: "Sofia", sans-serif;
 
 body { 
     font-size: 20px;
-    font: $font
+    font-family: $font
 }
 
 
@@ -16,7 +17,6 @@ body {
         margin-right: 20px; 
         color: inherit; 
         text-decoration: none; 
-        font: $font;
     }
 
     a:last-child {
@@ -27,7 +27,6 @@ body {
 h1 {
     font-size: 30px;
     color: black;
-    font-family: $font;
 }
 
 h3{ 
@@ -39,24 +38,27 @@ h3{
     display: flex;
     flex-direction: column;
     align-items: center;
+    font: $font;
 
     form {
         margin: 10px 0;
         display: flex;
         flex-direction: column;
+        align-items: center; 
         width: 100%;
+        max-width: 800px;
 
         label {
-            display: block;
-            margin-bottom: 10px;
+            align-self: flex-start; 
             font-size: 18px;
             color: black;
             width: 100%;
+            text-align: left;
         }
 
         input[type="text"] {
-            width: 100%; 
-            max-width: 50%; 
+            width: 100%;
+            max-width: 50%;
             height: 30px;
             padding: 10px;
             font-size: 18px;
@@ -67,13 +69,12 @@ h3{
 
         input[type="submit"] {
             width: 200px;
-            height: 40px;
+            height: 30px;
             font-size: 16px;
             border-radius: 5px;
             background-color: $color;
             color: white;
-            align-items: center;
-
+            cursor: pointer;
 
             &:hover {
                 background-color: darken($color, 10%);
